<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".RegistroUsuario">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:text="@string/Text_Registro"
            android:textSize="50sp" />

        <EditText

            android:id="@+id/nombreEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:autofillHints="name"
            android:layout_marginHorizontal="30sp"
            android:layout_marginBottom="10sp"
            android:inputType="text"
            android:hint="@string/ayuda_nombre_completo"
            android:text="" />

        <EditText
            android:autofillHints="emailAddress"
            android:id="@+id/correoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginHorizontal="30sp"
            android:layout_marginBottom="10sp"
            android:hint="@string/ayuda_correo"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/celularEditText"
            android:autofillHints="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginHorizontal="30sp"
            android:layout_marginBottom="10sp"
            android:hint="@string/ayuda_celular"
            android:inputType="phone" />

        <EditText
            android:id="@+id/contrasenaEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginHorizontal="30sp"
            android:hint="@string/ayuda_contrasena"
            android:autofillHints="password"
            android:layout_marginBottom="30sp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="80sp"
            android:text="@string/text_registrar" />

    </LinearLayout>
</layout>