<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".CuentaConfirmada">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cuenta_confirmada"
            android:textSize="25sp"
            android:layout_marginBottom="200sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cuenta_confirmada_2"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="90sp"/>

        <TextView
            android:id="@+id/irMenuTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_ir_menu"
            android:textColor="@color/blue"
            android:clickable="true"
            android:gravity="center"/>

    </LinearLayout>
</layout>